--- a/samples/basic/Cargo.toml
+++ b/samples/basic/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 nightly-testing = []
 
 [dependencies]
-elastic_hyper = { version = "*", path = "../../" }
+elastic_reqwest = { version = "*", path = "../../" }
 elastic_requests = "*"
 json_str = "*"
 hyper = "~0.9.0"
