--- a/samples/typed/Cargo.toml
+++ b/samples/typed/Cargo.toml
@@ -7,8 +7,8 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 nightly-testing = []
 
 [dependencies]
-hyper = "~0.9.0"
-elastic_hyper = { version = "*", path = "../../" }
+reqwest = "*"
+elastic_reqwest = { version = "*", path = "../../" }
 elastic_requests = "*"
 elastic_types = { version = "*", features = ["nightly"]}
 elastic_types_derive = "*"
