--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "elastic_reqwest"
 version = "0.1.0"
-authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+authors = ["Ashley Mannix <ashleymannix@live.com.au>", "Stephan Buys <stephan.buys@gmail.com>"]
 license = "Apache-2.0"
 description = "A lightweight implementation of the Elasticsearch API based on Reqwest, derived from elastic-hyper."
 #documentation = "https://docs.rs/elastic_types/0.4.0/elastic_hyper/"
