--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "elastic_reqwest"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>", "Stephan Buys <stephan.buys@gmail.com>"]
 license = "Apache-2.0"
-description = "A lightweight implementation of the Elasticsearch API based on Reqwest, derived from elastic-hyper."
+description = "A lightweight implementation of the Elasticsearch API based on reqwest."
 documentation = "https://docs.rs/elastic_reqwest/0.1.0/elastic_reqwest/"
 repository = "https://github.com/elastic-rs/elastic-hyper"
 exclude = [ "samples" ]
