--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ exclude = [ "samples" ]
 
 [dependencies]
 elastic_requests = "~0.1.0"
-reqwest = "*"
-url = "*"
+reqwest = "~0.2.0"
+url = "~1.1.0"
 
 [dev-dependencies]
 json_str = "*"
