--- a/samples/bulk/Cargo.toml
+++ b/samples/bulk/Cargo.toml
@@ -3,8 +3,11 @@ name = "elastic_hyper_samples"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
+[features]
+profiling = []
+
 [dependencies]
 elastic_reqwest = { version = "*", path = "../../" }
 elastic_requests = "*"
 
-json_str = "*"
+lazy_static = { version = "*", optional = true }
