--- a/samples/bulk/Cargo.toml
+++ b/samples/bulk/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "elastic_hyper_samples"
+name = "bulk"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
