--- a/samples/typed/Cargo.toml
+++ b/samples/typed/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "elastic_hyper_samples"
+name = "typed"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
@@ -7,6 +7,7 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 elastic_reqwest = { version = "*", path = "../../" }
 elastic_requests = "*"
 
+reqwest = "~0.2.0"
 serde = "~0.8.0"
 serde_derive = "~0.8.0"
 serde_json = "~0.8.0"
