--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,11 @@ repository = "https://github.com/stephanbuys/elastic_responses"
 exclude = [ "samples" ]
 
 [dependencies]
-json_str = "*"
-log = "*"
-serde = "0.8"
-serde_derive = "0.8"
-serde_json = "^0.8"
-slog = "*"
-slog-envlogger = "*"
-slog-stdlog = "*"
+json_str = "~0.3"
+log = "~0.3"
+serde = "~0.8"
+serde_derive = "~0.8"
+serde_json = "~0.8"
+slog = "~1.4"
+slog-envlogger = "~0.5"
+slog-stdlog = "~1.1"
