--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ name = "elastic_responses"
 version = "0.2.1"
 license = "MIT/Apache-2.0"
 description = "Parses search results from Elasticsearch and presents results using convenient iterators."
-documentation = "https://docs.rs/elastic_responses/0.2.1/elastic_responses/"
+documentation = "https://docs.rs/elastic_responses"
 repository = "https://github.com/stephanbuys/elastic-responses"
 exclude = [ "samples" ]
 
