--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -24,7 +24,7 @@ geohash = "~0.2.7"
 geojson = { version = "~0.4.0", features = [ "with-serde" ] }
 
 serde_derive = { version = "~0.8.0", optional = true }
-elastic_types_derive = { version = "~0.8.0", optional = true }
+elastic_types_derive = { version = "~0.8.0", path = "../macros/types", optional = true }
 elastic_date_macros = "~0.5.1"
 
 [dev-dependencies]
