--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,9 @@ repository = "https://github.com/elastic-rs/elastic"
 [dependencies]
 elastic_types = "~0.9.0"
 elastic_requests = "~0.1.0"
+reqwest = "~0.2.0"
 elastic_reqwest = "~0.1.0"
+elastic_responses = "~0.2.0"
+
+[dev-dependencies]
+json_str = "*"
