--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A client for the Elassticsearch REST API."
@@ -14,4 +14,4 @@ elastic_reqwest = "~0.1.0"
 elastic_responses = "~0.2.0"
 
 [dev-dependencies]
-json_str = "*"
+json_str = "~0.3.0"
