--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,14 @@ documentation = "https://docs.rs/elastic/"
 repository = "https://github.com/elastic-rs/elastic"
 
 [dependencies]
-elastic_types = "~0.9.0"
-elastic_requests = "~0.1.0"
+serde = "~0.8.0"
+serde_json = "~0.8.0"
 reqwest = "~0.2.0"
+
 elastic_reqwest = "~0.1.0"
+elastic_requests = "~0.1.0"
 elastic_responses = "~0.2.0"
+elastic_types = "~0.9.0"
 
 [dev-dependencies]
 json_str = "~0.3.0"
