--- a/macros/types/Cargo.toml
+++ b/macros/types/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_types_derive"
-version = "0.8.1"
+version = "0.9.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "Compile-time code generation for Elasticsearch type implementations."
@@ -11,6 +11,7 @@ name = "elastic_types_derive"
 proc-macro = true
 
 [features]
+elastic = [ ]
 nightly-testing = [ ]
 
 [dependencies]
