--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A client for the Elassticsearch REST API."
@@ -15,7 +15,9 @@ reqwest = "~0.2.0"
 elastic_reqwest = "~0.1.0"
 elastic_requests = "~0.1.0"
 elastic_responses = "~0.2.0"
-elastic_types = "~0.9.0"
+elastic_types = { version = "~0.10.0", path = "../elastic-types/types" }
 
 [dev-dependencies]
 json_str = "~0.3.0"
+serde_derive = "~0.8.0"
+elastic_types_derive = { version = "~0.9.0", path = "../elastic-types/macros/types", features = ["elastic"] }
