--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ documentation = "https://docs.rs/elastic/"
 repository = "https://github.com/elastic-rs/elastic"
 
 [dependencies]
+error-chain = "~0.7.0"
 serde = "~0.8.0"
 serde_json = "~0.8.0"
 reqwest = "~0.2.0"
@@ -15,9 +16,9 @@ reqwest = "~0.2.0"
 elastic_reqwest = "~0.1.0"
 elastic_requests = "~0.1.0"
 elastic_responses = "~0.2.0"
-elastic_types = "~0.10.0"
+elastic_types = "~0.10.1"
 
 [dev-dependencies]
 json_str = "~0.3.0"
 serde_derive = "~0.8.0"
-elastic_types_derive = { version = "~0.9.0", features = ["elastic"] }
+elastic_types_derive = { version = "~0.10.0", features = ["elastic"] }
