--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,18 @@ description = "A client for the Elassticsearch REST API."
 documentation = "https://docs.rs/elastic/"
 repository = "https://github.com/elastic-rs/elastic"
 
+[features]
+nightly = [
+	"elastic_types/nightly" 
+]
+
 [dependencies]
 error-chain = "~0.7.0"
 serde = "~0.8.0"
 serde_json = "~0.8.0"
 reqwest = "~0.2.0"
 
-elastic_reqwest = "~0.1.0"
+elastic_reqwest = { version = "~0.2.0", path = "../elastic-hyper" }
 elastic_requests = "~0.1.0"
 elastic_responses = "~0.2.0"
 elastic_types = "~0.10.1"
