--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "elastic_reqwest"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>", "Stephan Buys <stephan.buys@gmail.com>"]
 license = "Apache-2.0"
 description = "A lightweight implementation of the Elasticsearch API based on reqwest."
-documentation = "https://docs.rs/elastic_reqwest/0.2.0/elastic_reqwest/"
+documentation = "https://docs.rs/elastic_reqwest/0.2.1/elastic_reqwest/"
 repository = "https://github.com/elastic-rs/elastic-hyper"
 exclude = [ "samples" ]
 
@@ -14,4 +14,4 @@ reqwest = "~0.2.0"
 url = "~1"
 
 [dev-dependencies]
-json_str = "~0.3"
+json_str = "^0.*"
