--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,6 @@ elastic_responses = "~0.2.0"
 elastic_types = "~0.10.1"
 
 [dev-dependencies]
-json_str = "~0.3.0"
+json_str = "^0.*"
 serde_derive = "~0.8.0"
 elastic_types_derive = { version = "~0.10.0", features = ["elastic"] }
