--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ repository = "https://github.com/stephanbuys/elastic-responses"
 exclude = [ "samples" ]
 
 [dependencies]
-json_str = "~0.3"
 log = "~0.3"
 serde = "~0.8"
 serde_derive = "~0.8"
@@ -17,3 +16,6 @@ serde_json = "~0.8"
 slog = "~1.4"
 slog-envlogger = "~0.5"
 slog-stdlog = "~1.1"
+
+[dev-dependencies]
+json_str = "^0.*"
