--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde_json = "~0.8"
 slog = "~1.4"
 slog-envlogger = "~0.5"
 slog-stdlog = "~1.1"
+quick-error = "~1"
 
 [dev-dependencies]
 json_str = "^0.*"
