use cargo feature for test

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
 
 script:
   - |
-      travis-cargo test --features nightly &&
+      cargo test --features nightly &&
       travis-cargo doc
 after_success:
   - travis-cargo doc-upload
