--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -16,15 +16,15 @@ nightly = [
 nightly-testing = ["nightly"]
 
 [dependencies]
-serde = "~0.8.0"
-serde_json = "~0.8.0"
+serde = "~0.9.0"
+serde_json = "~0.9.0"
 chrono = { version = "~0.2.20", features = [ "serde" ]}
-geo = "~0.0.7"
+geo = "~0.3.0"
 geohash = "~0.2.7"
 geojson = { version = "~0.4.0", features = [ "with-serde" ] }
 
-serde_derive = { version = "~0.8.0", optional = true }
-elastic_types_derive = { version = "~0.10.1", optional = true }
+serde_derive = { version = "~0.9.0", optional = true }
+elastic_types_derive = { version = "~0.11.0", path = "../macros/types", optional = true }
 elastic_date_macros = "~0.5.1"
 
 [dev-dependencies]
