--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ script:
       cd $CRATE &&
       travis-cargo build &&
       if [ -z $NO_TEST ]; then travis-cargo --only stable test; fi &&
-      travis-cargo --only nightly test -- --features nightly-testing --no-default-features &&
-      travis-cargo --only nightly bench -- --features nightly-testing --no-default-features &&
+      travis-cargo --only nightly test -- --features nightly --no-default-features &&
+      travis-cargo --only nightly bench -- --features nightly --no-default-features &&
       travis-cargo --only nightly doc &&
       if [ $DOC_UPLOAD ]; then travis-cargo --only nightly doc-upload; fi
