--- a/macros/date/Cargo.toml
+++ b/macros/date/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_date_macros"
-version = "0.5.2"
+version = "0.5.3"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "Compile-time code generation for chrono date formats."
@@ -9,7 +9,7 @@ repository = "https://github.com/elastic-rs/elastic-types"
 
 [lib]
 name = "elastic_date_macros"
-crate_type = [ "dylib" ]
+crate_type = [ "rlib", "dylib" ]
 plugin = true
 
 [features]
