--- a/examples/account_sample/Cargo.toml
+++ b/examples/account_sample/Cargo.toml
@@ -12,6 +12,7 @@ nightly = [
 elastic = { version = "*", path = "../../" }
 elastic_types_derive = { version = "*", features = ["elastic"]}
 
+quick-error = "*"
 serde = "0.8"
 serde_json = "0.8"
 serde_derive = "0.8"
