--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -19,7 +19,7 @@ chrono = { version = "~0.2.20", features = [ "serde" ]}
 geo = "~0.0.7"
 geohash = "~0.2.7"
 geojson = { version = "~0.4.0", features = [ "with-serde" ] }
-elastic_date_macros = { version = "~0.5.3", path = "../macros/date" }
+elastic_date_macros = { version = "*", path = "../macros/date" }
 
 [dev-dependencies]
 json_str = "^0.*"
