--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -24,5 +24,5 @@ elastic_date_macros = { version = "*", path = "../macros/date" }
 [dev-dependencies]
 json_str = "^0.*"
 maplit = "^0.*"
-elastic_types_derive = "~0.10.1"
+elastic_types_derive = { version = "*", path = "../macros/types" }
 serde_derive = "~0.8.0"
