--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,6 @@ matrix:
     - rust: stable
       env:
         - CRATE="types"
-        - NO_TEST=true
     - rust: nightly
       env:
         - CRATE="macros/date"
@@ -38,8 +37,7 @@ before_script:
 script:
   - |
       cd $CRATE &&
-      travis-cargo build &&
-      if [ -z $NO_TEST ]; then travis-cargo --only stable test; fi &&
+      travis-cargo test &&
       travis-cargo --only nightly test -- --features nightly --no-default-features &&
       travis-cargo --only nightly bench -- --features nightly --no-default-features &&
       travis-cargo --only nightly doc &&
