--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ reqwest = "~0.2.0"
 
 elastic_reqwest = "~0.2.0"
 elastic_requests = "~0.1.0"
-elastic_responses = "~0.4.0"
+elastic_responses = { version = "~0.5.0", git = "https://github.com/KodrAus/elastic-responses.git", branch = "feat/read-response" }
 elastic_types = "~0.10.2"
 
 [dev-dependencies]
