--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -15,10 +15,10 @@ nightly = [
 [dependencies]
 serde = "~0.9.0"
 serde_json = "~0.9.0"
-chrono = { version = "*", git = "https://github.com/KodrAus/rust-chrono.git", branch = "chore/serde-0.9", features = [ "serde" ]}
+chrono = { version = "~0.3.0", features = [ "serde" ]}
 geo = "~0.3.0"
 geohash = "~0.3.0"
-geojson = { version = "*", git = "https://github.com/KodrAus/rust-geojson.git", branch = "chore/serde-0.9" }
+geojson = "~0.5.0"
 serde_derive = "~0.9.0"
 elastic_date_macros = { version = "*", path = "../macros/date" }
 
