--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_types"
-version = "0.10.4"
+version = "0.11.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
@@ -20,9 +20,9 @@ geo = "~0.3.0"
 geohash = "~0.3.0"
 geojson = "~0.5.0"
 serde_derive = "~0.9.0"
-elastic_date_macros = { version = "*", path = "../macros/date" }
+elastic_date_macros = "~0.6.0"
 
 [dev-dependencies]
 json_str = "^0.*"
 maplit = "^0.*"
-elastic_types_derive = { version = "*", path = "../macros/types" }
+elastic_types_derive = "~0.12.0"
