--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
 name = "elastic_reqwest"
-version = "0.3.1"
+version = "0.4.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>", "Stephan Buys <stephan.buys@gmail.com>"]
 license = "Apache-2.0"
 description = "A lightweight implementation of the Elasticsearch API based on reqwest."
-documentation = "https://docs.rs/elastic_reqwest/0.2.2/elastic_reqwest/"
+documentation = "https://docs.rs/elastic_reqwest/*/elastic_reqwest/"
 repository = "https://github.com/elastic-rs/elastic-hyper"
 exclude = [ "samples" ]
 
 [dependencies]
 elastic_requests = "~0.1.7"
-reqwest = "~0.3.0"
+reqwest = "~0.4.0"
 url = "~1"
 
 [dev-dependencies]
