--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,11 @@ script:
       travis-cargo test &&
       cd examples/account_sample &&
       travis-cargo test &&
-      cd ../../ &&
+      cd ../../benches/rust/elastic &&
+      travis-cargo --only nightly build &&
+      cd ../elastic-raw &&
+      travis-cargo --only nightly build &&
+      cd ../../../ &&
       travis-cargo doc
 after_success:
   - travis-cargo doc-upload
