--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ reqwest = "~0.4.0"
 
 elastic_reqwest = "~0.4.0"
 elastic_requests = "~0.1.7"
-elastic_responses = { version = "~0.5.1", git = "https://github.com/KodrAus/elastic-responses.git", branch = "feat/read-response" }
+elastic_responses = "~0.5.0"
 elastic_types = "~0.11.1"
 
 [dev-dependencies]
