--- a/types-derive/Cargo.toml
+++ b/types-derive/Cargo.toml
@@ -11,12 +11,7 @@ name = "elastic_types_derive"
 proc-macro = true
 
 [features]
-elastic = [ ]
-nightly = [ ]
 
 [dependencies]
-serde = "~0.9.0"
-serde_json = "~0.9.0"
-syn = { version = "~0.11.0", features = ["aster", "visit", "parsing", "full"] }
+elastic_types_derive_internals = { version = "*", path = "../types-derive-internals" }
 quote = "~0.3.0"
-serde_codegen_internals = { version = "~0.12.0", default-features = false }
