--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -7,11 +7,6 @@ description = "A strongly-typed implementation of Elasticsearch core types and M
 documentation = "https://docs.rs/elastic_types/0.10.4/elastic_types/"
 repository = "https://github.com/elastic-rs/elastic-types"
 
-[features]
-nightly = [
-	"elastic_date_macros/nightly"
-]
-
 [dependencies]
 serde = "~0.9.0"
 serde_json = "~0.9.0"
@@ -20,9 +15,8 @@ geo = "~0.3.0"
 geohash = "~0.3.0"
 geojson = "~0.5.0"
 serde_derive = "~0.9.0"
-elastic_date_macros = "~0.6.0"
+elastic_types_derive = { version = "~0.12.0", path = "../types-derive" }
 
 [dev-dependencies]
 json_str = "^0.*"
 maplit = "^0.*"
-elastic_types_derive = "~0.12.0"
