--- a/types-derive-internals/Cargo.toml
+++ b/types-derive-internals/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "types_derive_internals"
+name = "elastic_types_derive_internals"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
@@ -9,3 +9,6 @@ serde_json = "~0.9.0"
 syn = { version = "~0.11.0", features = ["aster", "visit", "parsing", "full"] }
 quote = "~0.3.0"
 serde_codegen_internals = { version = "~0.12.0", default-features = false }
+quick-error = "*"
+nom = "*"
+chrono = { version = "~0.3.0", features = [ "serde" ]}
