--- a/types-derive/Cargo.toml
+++ b/types-derive/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_types_derive"
-version = "0.12.0"
+version = "0.13.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "Compile-time code generation for Elasticsearch type implementations."
@@ -14,4 +14,5 @@ proc-macro = true
 
 [dependencies]
 elastic_types_derive_internals = { version = "*", path = "../types-derive-internals" }
+syn = { version = "~0.11.0", features = ["aster", "visit", "parsing", "full"] }
 quote = "~0.3.0"
