--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -15,7 +15,7 @@ geo = "~0.3.0"
 geohash = "~0.3.0"
 geojson = "~0.5.0"
 serde_derive = "~0.9.0"
-elastic_types_derive = { version = "~0.12.0", path = "../types-derive" }
+elastic_types_derive = { version = "*", path = "../types-derive" }
 
 [dev-dependencies]
 json_str = "^0.*"
