--- a/examples/account_sample/Cargo.toml
+++ b/examples/account_sample/Cargo.toml
@@ -3,14 +3,9 @@ name = "account-sample"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
-[features]
-nightly = [
-	"elastic/nightly"
-]
-
 [dependencies]
 elastic = { version = "*", path = "../../" }
-elastic_types_derive = { version = "*", features = ["elastic"]}
+elastic_derive = { version = "*", path = "../../derive" }
 
 quick-error = "*"
 serde = "0.9"
