--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,9 @@ before_script:
 script:
   - |
       travis-cargo test &&
-      cd examples/account_sample &&
+      cd derive &&
+      travis-cargo test &&
+      cd ../examples/account_sample &&
       travis-cargo test &&
       cd ../../benches/rust/elastic &&
       travis-cargo --only nightly build &&
