--- a/types-derive-internals/Cargo.toml
+++ b/types-derive-internals/Cargo.toml
@@ -9,6 +9,6 @@ serde_json = "~0.9.0"
 syn = { version = "~0.11.0", features = ["aster", "visit", "parsing", "full"] }
 quote = "~0.3.0"
 serde_codegen_internals = { version = "~0.12.0", default-features = false }
-quick-error = "*"
-nom = "*"
+quick-error = "~1"
+nom = "~2"
 chrono = { version = "~0.3.0", features = [ "serde" ]}
