--- a/types-derive-internals/Cargo.toml
+++ b/types-derive-internals/Cargo.toml
@@ -2,6 +2,9 @@
 name = "elastic_types_derive_internals"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+license = "Apache-2.0"
+description = "Codegen internals for elastic_types."
+repository = "https://github.com/elastic-rs/elastic-types"
 
 [dependencies]
 serde = "~0.9.0"
