--- a/types-derive/Cargo.toml
+++ b/types-derive/Cargo.toml
@@ -10,9 +10,7 @@ repository = "https://github.com/elastic-rs/elastic-types"
 name = "elastic_types_derive"
 proc-macro = true
 
-[features]
-
 [dependencies]
-elastic_types_derive_internals = { version = "*", path = "../types-derive-internals" }
+elastic_types_derive_internals = "~0.1.0"
 syn = { version = "~0.11.0", features = ["aster", "visit", "parsing", "full"] }
 quote = "~0.3.0"
