--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "elastic_types"
-version = "0.12.0"
+version = "0.13.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
-documentation = "https://docs.rs/elastic_types/0.10.4/elastic_types/"
+documentation = "https://docs.rs/elastic_types/*/elastic_types/"
 repository = "https://github.com/elastic-rs/elastic-types"
 
 [dependencies]
@@ -15,7 +15,7 @@ geo = "~0.3.0"
 geohash = "~0.3.0"
 geojson = "~0.5.0"
 serde_derive = "~0.9.0"
-elastic_types_derive = { version = "*", path = "../types-derive" }
+elastic_types_derive = "~0.13.0"
 
 [dev-dependencies]
 json_str = "^0.*"
