--- a/benches/rust/elastic-raw/Cargo.toml
+++ b/benches/rust/elastic-raw/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 [dependencies]
 json_str = { version = "*", features = ["nightly"]}
 
-elastic = { version = "*", path = "../../../", features = ["nightly"] }
+elastic = { version = "*", path = "../../../elastic" }
 
 lazy_static = "*"
 time = "*"
