--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -2,6 +2,9 @@
 name = "elastic_derive"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+license = "Apache-2.0"
+description = "Compile-time code generation for Elasticsearch type implementations."
+repository = "https://github.com/elastic-rs/elastic"
 
 [lib]
 name = "elastic_derive"
