--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -21,4 +21,4 @@ elastic_types = "~0.13.0"
 [dev-dependencies]
 json_str = "^0.*"
 serde_derive = "~0.9.0"
-elastic_derive = { version = "*", path = "../derive" }
+elastic_derive = "~0.1.0"
