--- a/elastic/examples/account_sample/Cargo.toml
+++ b/elastic/examples/account_sample/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [dependencies]
 elastic = { version = "*", path = "../../" }
-elastic_derive = { version = "*", path = "../../../derive" }
+elastic_derive = "~0.1.0"
 
 quick-error = "*"
 serde = "0.9"
