--- a/benches/rust/rs-es/Cargo.toml
+++ b/benches/rust/rs-es/Cargo.toml
@@ -3,6 +3,9 @@ name = "rs-es_bench"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
+[profile.release]
+debug = true
+
 [dependencies]
 serde = "*"
 serde_derive = "*"
