--- a/benches/rust/rs-es/Cargo.toml
+++ b/benches/rust/rs-es/Cargo.toml
@@ -6,6 +6,9 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 [profile.release]
 debug = true
 
+[features]
+ssl = ["rs-es/ssl"]
+
 [dependencies]
 serde = "*"
 serde_derive = "*"
