--- a/samples/typed/Cargo.toml
+++ b/samples/typed/Cargo.toml
@@ -10,7 +10,7 @@ reqwest = "~0.4.0"
 serde = "~0.9.0"
 serde_derive = "~0.9.0"
 serde_json = "~0.9.0"
-elastic_types = { version = "*", features = ["nightly"]}
+elastic_types = "*"
 elastic_types_derive = "*"
 
 json_str = { version = "*", features = ["nightly"]}
