--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_script:
 
 script:
   - |
+      travis-cargo --only nightly build --features nightly &&
       travis-cargo build &&
       travis-cargo test &&
       travis-cargo bench &&
