--- a/samples/bulk/Cargo.toml
+++ b/samples/bulk/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [features]
+nightly = ["elastic_reqwest/nightly"]
 profiling = []
 
 [dependencies]
