--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
 
 script:
   - |
-      travis-cargo --only nightly cargo build --features nightly &&
+      travis-cargo --only nightly build -- --features nightly &&
       travis-cargo build &&
       travis-cargo test &&
       travis-cargo bench &&
