--- a/elastic/examples/account_sample/Cargo.toml
+++ b/elastic/examples/account_sample/Cargo.toml
@@ -3,6 +3,9 @@ name = "account-sample"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
+[features]
+nightly = ["elastic/nightly"]
+
 [dependencies]
 elastic = { version = "*", path = "../../" }
 elastic_derive = "~0.1.0"
