--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic"
-version = "0.11.0"
+version = "0.10.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 keywords = ["elasticsearch", "search"]
@@ -17,8 +17,8 @@ serde = "~0.9.0"
 serde_json = "~0.9.0"
 reqwest = "~0.4.0"
 
-elastic_reqwest = { version = "~0.6.0", git = "https://github.com/elastic-rs/elastic-reqwest.git", branch = "feat/update-requests" }
-elastic_requests = { version = "~0.3.0", git = "https://github.com/elastic-rs/elastic-requests.git", branch = "feat/generic-body" }
+elastic_reqwest = "~0.6.0"
+elastic_requests = "~0.3.0"
 elastic_responses = "~0.5.0"
 elastic_types = "~0.13.0"
 
