--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -17,8 +17,8 @@ serde = "~0.9.0"
 serde_json = "~0.9.0"
 reqwest = "~0.4.0"
 
-elastic_reqwest = { version = "~0.7.0", git = "https://github.com/elastic-rs/elastic-reqwest.git", branch = "feat/update-requests" }
-elastic_requests = { version = "~0.4.0", git = "https://github.com/elastic-rs/elastic-requests.git", branch = "feat/ping-get" }
+elastic_reqwest = "~0.7.0"
+elastic_requests = "~0.4.0"
 elastic_responses = { version = "~0.6.0", git = "https://github.com/elastic-rs/elastic-responses" }
 elastic_types = "~0.13.0"
 
