--- a/elastic/examples/async_sample/Cargo.toml
+++ b/elastic/examples/async_sample/Cargo.toml
@@ -5,6 +5,10 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [dependencies]
 elastic_requests = "*"
+elastic_responses = { version = "*", git = "https://github.com/KodrAus/elastic-responses.git", branch = "feat/bulk" }
+
+serde = "*"
+serde_json = "*"
 
 tokio-core = "*"
 tokio-proto = "*"
