--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -19,7 +19,7 @@ reqwest = "~0.4.0"
 
 elastic_reqwest = "~0.7.0"
 elastic_requests = "~0.4.0"
-elastic_responses = { version = "*", git = "https://github.com/KodrAus/elastic-responses.git", branch = "feat/bulk" }
+elastic_responses = "~0.6.1"
 elastic_types = "~0.13.0"
 
 [dev-dependencies]
