--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,5 @@ members = [
     "elastic",
     "derive",
     "elastic/examples/account_sample",
-    "elastic/examples/async_sample",
-    "benches/rust/elastic",
-    "benches/rust/elastic_raw",
-    "benches/rust/rs-es",
+    "elastic/examples/async_sample"
 ]
