--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,6 @@ matrix:
     - rust: nightly
       env:
         - CRATE="elastic"
-        - DOC_UPLOAD=true
 
 env:
   global:
@@ -42,9 +41,6 @@ before_script:
 
 script:
   - |
-      export SRC_ROOT=$(pwd) &&
       cd $CRATE &&
       travis-cargo test &&
-      travis-cargo --only nightly bench &&
-      travis-cargo --only nightly doc &&
-      if [ $DOC_UPLOAD ]; then cd $SRC_ROOT && travis-cargo --only nightly doc-upload; fi
+      travis-cargo --only nightly bench
