--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_types"
-version = "0.13.0"
+version = "0.14.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
@@ -8,14 +8,14 @@ documentation = "https://docs.rs/elastic_types/*/elastic_types/"
 repository = "https://github.com/elastic-rs/elastic-types"
 
 [dependencies]
-serde = "~0.9.0"
+serde = "~0.9.14"
 serde_json = "~0.9.0"
 chrono = { version = "~0.3.0", features = [ "serde" ]}
 geo = "~0.3.0"
 geohash = "~0.3.0"
 geojson = "~0.5.0"
 serde_derive = "~0.9.0"
-elastic_types_derive = "~0.13.0"
+elastic_types_derive = { version = "~0.14.0", path = "../types-derive" }
 
 [dev-dependencies]
 json_str = "^0.*"
