--- a/elastic/examples/async_sample/Cargo.toml
+++ b/elastic/examples/async_sample/Cargo.toml
@@ -7,8 +7,8 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 elastic_requests = "*"
 elastic_responses = "*"
 
-serde = "*"
-serde_json = "*"
+serde = "~0.9.0"
+serde_json = "~0.9.0"
 
 tokio-core = "*"
 tokio-proto = "*"
