use serde 0.9 for now

--- a/benches/rust/rs-es/Cargo.toml
+++ b/benches/rust/rs-es/Cargo.toml
@@ -7,8 +7,8 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 ssl = ["rs-es/ssl"]
 
 [dependencies]
-serde = "*"
-serde_derive = "*"
+serde = "~0.9"
+serde_derive = "~0.9"
 
 rs-es = { version = "*", default-features = false }
 
