--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.7.1"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>", "Stephan Buys <stephan.buys@gmail.com>"]
 license = "Apache-2.0"
 description = "A lightweight implementation of the Elasticsearch API based on reqwest."
-documentation = "https://docs.rs/elastic_reqwest/*/elastic_reqwest/"
-repository = "https://github.com/elastic-rs/elastic-hyper"
+documentation = "https://docs.rs/elastic_reqwest/"
+repository = "https://github.com/elastic-rs/elastic-reqwest"
 exclude = [ "samples" ]
 
 [features]
