--- a/samples/typed/Cargo.toml
+++ b/samples/typed/Cargo.toml
@@ -7,10 +7,11 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 elastic_reqwest = { version = "*", path = "../../" }
 
 reqwest = "~0.4.0"
-serde = "~0.9.0"
-serde_derive = "~0.9.0"
-serde_json = "~0.9.0"
+serde = "~1"
+serde_derive = "~1"
+serde_json = "~1"
 elastic_types = "*"
 elastic_types_derive = "*"
+elastic_responses = "*"
 
 json_str = { version = "*", features = ["nightly"]}
