--- a/benches/rust/elastic/Cargo.toml
+++ b/benches/rust/elastic/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [dependencies]
-serde = "~0.9"
-serde_derive = "~0.9"
+serde = "*"
+serde_derive = "*"
 json_str = { version = "*", features = ["nightly"]}
 
 elastic = { version = "*", path = "../../../elastic", features = ["nightly"] }
