--- a/samples/typed/Cargo.toml
+++ b/samples/typed/Cargo.toml
@@ -10,8 +10,8 @@ reqwest = "~0.4.0"
 serde = "~1"
 serde_derive = "~1"
 serde_json = "~1"
-elastic_types = "*"
-elastic_types_derive = "*"
-elastic_responses = "*"
+elastic_types = "~0.15"
+elastic_types_derive = "~0.15"
+elastic_responses = "~0.7"
 
 json_str = { version = "*", features = ["nightly"]}
