--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -25,4 +25,4 @@ elastic_types = "~0.15.0"
 [dev-dependencies]
 json_str = "^0.*"
 serde_derive = "~1"
-elastic_derive = "~0.1.0"
+elastic_derive = { version = "~0.2.0", path = "../derive" }
