--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -19,9 +19,9 @@ reqwest = "~0.4.0"
 
 elastic_reqwest = "~0.7.1"
 elastic_responses = "~0.7.2"
-elastic_types = "~0.15.0"
+elastic_types = { version = "~0.16.0", path = "../../elastic-types/types" }
 
 [dev-dependencies]
 json_str = "^0.*"
 serde_derive = "~1"
-elastic_derive = { version = "~0.2.0", path = "../derive" }
+elastic_derive = { version = "~0.12.0", path = "../derive" }
