--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -19,7 +19,7 @@ reqwest = "~0.4.0"
 
 elastic_reqwest = "~0.7.1"
 elastic_responses = "~0.7.2"
-elastic_types = { version = "~0.16.0", path = "../../elastic-types/types" }
+elastic_types = "~0.16.0"
 
 [dev-dependencies]
 json_str = "^0.*"
