--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "elastic",
     "derive",
-    "elastic/examples/account_sample",
-    "elastic/examples/async_sample"
+    "tests/run",
+    "examples/account_sample",
+    "examples/async_raw_sample"
 ]
