--- a/examples/account_sample/Cargo.toml
+++ b/examples/account_sample/Cargo.toml
@@ -7,8 +7,8 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 nightly = ["elastic/nightly"]
 
 [dependencies]
-elastic = { version = "*", path = "../../" }
-elastic_derive = { version = "*", path = "../../../derive" }
+elastic = { version = "*", path = "../../elastic" }
+elastic_derive = { version = "*", path = "../../derive" }
 
 quick-error = "*"
 serde = "*"
