flesh out integration test runner

--- a/tests/run/Cargo.toml
+++ b/tests/run/Cargo.toml
@@ -12,6 +12,6 @@ serde_derive = "~1"
 serde_json = "~1"
 futures = "*"
 tokio-core = "*"
-tokio-io = "*"
+tokio-timer = "*"
 futures-cpupool = "*"
 term-painter = "*"
