--- a/benches/elastic/Cargo.toml
+++ b/benches/elastic/Cargo.toml
@@ -8,7 +8,7 @@ serde = "*"
 serde_derive = "*"
 json_str = { version = "*", features = ["nightly"]}
 
-elastic = { version = "*", path = "../../../elastic", features = ["nightly"] }
-elastic_derive = { version = "*", path = "../../../derive" }
+elastic = { version = "*", path = "../../elastic", features = ["nightly"] }
+elastic_derive = { version = "*", path = "../../derive" }
 
 measure = { version = "*", path = "../measure" }
