--- a/benches/elastic_raw/Cargo.toml
+++ b/benches/elastic_raw/Cargo.toml
@@ -6,6 +6,6 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 [dependencies]
 json_str = { version = "*", features = ["nightly"]}
 
-elastic = { version = "*", path = "../../../elastic", features = ["nightly"] }
+elastic = { version = "*", path = "../../elastic", features = ["nightly"] }
 
 measure = { version = "*", path = "../measure" }
