--- a/benches/prepare/Cargo.toml
+++ b/benches/prepare/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [dependencies]
-elastic = { version = "*", path = "../../../elastic", features = ["nightly"] }
-elastic_derive = { version = "*", path = "../../../derive" }
+elastic = { version = "*", path = "../../elastic", features = ["nightly"] }
+elastic_derive = { version = "*", path = "../../derive" }
 serde = "*"
 serde_derive = "*"
