--- a/benches/elastic_bulk/Cargo.toml
+++ b/benches/elastic_bulk/Cargo.toml
@@ -10,7 +10,7 @@ errors_only = []
 gzip = []
 
 [dependencies]
-reqwest = "*"
+reqwest = { version = "*", git = "https://github.com/seanmonstar/reqwest.git", features = ["unstable"] }
 elastic = { version = "*", path = "../../elastic", features = ["nightly"] }
 string_cache = { version = "*", optional = true }
 inlinable_string = { version = "*", features = ["serde"], optional = true }
