--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "src/types",
     "src/types_derive",
     "src/types_derive_internals",
+    "src/types/tests/derive_compile_test",
     "tests/run",
     "examples/account_sample",
     "examples/async_raw_sample"
