--- a/src/elastic/Cargo.toml
+++ b/src/elastic/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic"
-version = "0.14.0"
+version = "0.20.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 keywords = ["elasticsearch", "search"]
@@ -23,11 +23,11 @@ futures = "*"
 tokio-core = "*"
 futures-cpupool = "*"
 
-elastic_reqwest = { version = "*", path = "../reqwest" }
-elastic_types = "~0.19.0"
+elastic_reqwest = { version = "~0.20.0", path = "../reqwest" }
+elastic_types = { version = "~0.20.0", path = "../types" }
 
 [dev-dependencies]
 json_str = "~0.5"
 serde_derive = "~1"
-elastic_derive = { version = "~0.14.0", path = "../elastic_derive" }
+elastic_derive = { version = "~0.20.0", path = "../elastic_derive" }
 env_logger = "~0.4.3"
