--- a/src/reqwest/Cargo.toml
+++ b/src/reqwest/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "elastic_reqwest"
-version = "0.9.0"
+version = "0.20.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>", "Stephan Buys <stephan.buys@gmail.com>"]
 license = "Apache-2.0"
 description = "A lightweight implementation of the Elasticsearch API based on reqwest."
 documentation = "https://docs.rs/elastic_reqwest/"
-repository = "https://github.com/elastic-rs/elastic-reqwest"
+repository = "https://github.com/elastic-rs/elastic"
 exclude = [ "samples" ]
 
 [dependencies]
 serde = "~1"
-elastic_requests = { version = "~0.4.1", path = "../requests" }
-elastic_responses = { version = "~0.10.0", path = "../responses" }
+elastic_requests = { version = "~0.20.0", path = "../requests" }
+elastic_responses = { version = "~0.20.0", path = "../responses" }
 reqwest = { version = "*", git = "https://github.com/seanmonstar/reqwest.git", features = ["unstable"] }
 url = "~1"
 bytes = "*"
