--- a/src/responses/Cargo.toml
+++ b/src/responses/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-authors = ["Stephan Buys <stephan.buys@panoptix.co.za>"]
+authors = ["Stephan Buys <stephan.buys@panoptix.co.za>", "Ashley Mannix <ashleymannix@live.com.au>"]
 name = "elastic_responses"
-version = "0.10.0"
+version = "0.20.0"
 license = "MIT/Apache-2.0"
 description = "Parses search results from Elasticsearch and presents results using convenient iterators."
 documentation = "https://docs.rs/elastic_responses"
-repository = "https://github.com/elastic-rs/elastic-responses"
-exclude = [ "samples" ]
+repository = "https://github.com/elastic-rs/elastic"
 
 [dependencies]
 log = "~0.3"
