--- a/src/types/Cargo.toml
+++ b/src/types/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "elastic_types"
-version = "0.19.1"
+version = "0.20.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
-documentation = "https://docs.rs/elastic_types/*/elastic_types/"
-repository = "https://github.com/elastic-rs/elastic-types"
+documentation = "https://docs.rs/elastic_types/"
+repository = "https://github.com/elastic-rs/elastic"
 
 [dependencies]
 serde = "~1"
@@ -15,7 +15,7 @@ geo = "~0.4.0"
 geohash = "~0.4.0"
 geojson = "~0.8.0"
 serde_derive = "~1"
-elastic_types_derive = { version = "~0.19.1", path = "../types_derive" }
+elastic_types_derive = { version = "~0.20.0", path = "../types_derive" }
 
 [dev-dependencies]
 json_str = "^0.*"
