--- a/src/types_derive/Cargo.toml
+++ b/src/types_derive/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
 name = "elastic_types_derive"
-version = "0.19.1"
+version = "0.20.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "Compile-time code generation for Elasticsearch type implementations."
-repository = "https://github.com/elastic-rs/elastic-types"
+repository = "https://github.com/elastic-rs/elastic"
 
 [lib]
 name = "elastic_types_derive"
 proc-macro = true
 
 [dependencies]
-elastic_types_derive_internals = { version = "~0.19.1", path = "../types_derive_internals" }
+elastic_types_derive_internals = { version = "~0.20.0", path = "../types_derive_internals" }
 syn = { version = "~0.11.0", features = ["full"] }
 quote = "~0.3.0"
