--- a/src/types_derive_internals/Cargo.toml
+++ b/src/types_derive_internals/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "elastic_types_derive_internals"
-version = "0.19.1"
+version = "0.20.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "Codegen internals for elastic_types."
-repository = "https://github.com/elastic-rs/elastic-types"
+repository = "https://github.com/elastic-rs/elastic"
 
 [dependencies]
 serde = "~1"
