--- a/tests/run/Cargo.toml
+++ b/tests/run/Cargo.toml
@@ -11,8 +11,8 @@ elastic_derive = { version = "*", path = "../../src/elastic_derive" }
 serde = "~1"
 serde_derive = "~1"
 serde_json = "~1"
-futures = "*"
-tokio-core = "*"
+futures = "~0.1.16"
+tokio-core = "~0.1.9"
 tokio-timer = "*"
-futures-cpupool = "*"
+futures-cpupool = "~0.1.6"
 term-painter = "*"
