--- a/src/elastic/Cargo.toml
+++ b/src/elastic/Cargo.toml
@@ -13,15 +13,15 @@ travis-ci = { repository = "elastic-rs/elastic" }
 appveyor = { repository = "elastic-rs/elastic" }
 
 [dependencies]
-error-chain = "0.11.0-rc.2"
+error-chain = "0.11.0"
 log = "~0.3.8"
 uuid = { version = "~0.5.1", features = [ "v4" ] }
 serde = "~1"
 serde_json = "~1"
 reqwest = { version = "~0.8.0", features = ["unstable"] }
-futures = "*"
-tokio-core = "*"
-futures-cpupool = "*"
+futures = "~0.1.16"
+tokio-core = "~0.1.9"
+futures-cpupool = "~0.1.6"
 
 elastic_reqwest = { version = "~0.20.0", path = "../reqwest" }
 elastic_types = { version = "~0.20.0", path = "../types" }
