--- a/src/requests_codegen/Cargo.toml
+++ b/src/requests_codegen/Cargo.toml
@@ -2,6 +2,7 @@
 name = "elastic_codegen"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+publish = false
 
 [dependencies]
 serde = "*"
