--- a/src/reqwest/Cargo.toml
+++ b/src/reqwest/Cargo.toml
@@ -14,9 +14,9 @@ elastic_requests = { version = "~0.20.0", path = "../requests" }
 elastic_responses = { version = "~0.20.0", path = "../responses" }
 reqwest = { version = "~0.8.0", features = ["unstable"] }
 url = "~1"
-bytes = "*"
-tokio-core = "*"
-futures = "*"
+bytes = "0.4.5"
+tokio-core = "~0.1.9"
+futures = "~0.1.16"
 serde_json = "~1"
 quick-error = "~1"
 
