split build into parts

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,15 @@ matrix:
     - rust: nightly
       env:
         - CHANNEL="nightly"
+        - KIND="build"
+    - rust: nightly
+      env:
+        - CHANNEL="nightly"
+        - KIND="bench"
+    - rust: nightly
+      env:
+        - CHANNEL="nightly"
+        - KIND="integration"
 
 script: ./ci/travis.sh
 
