--- a/src/requests/Cargo.toml
+++ b/src/requests/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "elastic_requests"
-version = "0.20.7"
+version = "0.20.8"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
-license = "Apache-2.0"
+license = "MIT/Apache-2.0"
 description = "Code generated request types for the Elasticsearch REST API."
 documentation = "https://docs.rs/elastic_requests/"
 repository = "https://github.com/elastic-rs/elastic"
