--- a/src/types/Cargo.toml
+++ b/src/types/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "elastic_types"
-version = "0.20.7"
+version = "0.20.8"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
-license = "Apache-2.0"
+license = "MIT/Apache-2.0"
 description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
 documentation = "https://docs.rs/elastic_types/"
 repository = "https://github.com/elastic-rs/elastic"
