--- a/src/types_derive/Cargo.toml
+++ b/src/types_derive/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "elastic_types_derive"
-version = "0.20.7"
+version = "0.20.8"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
-license = "Apache-2.0"
+license = "MIT/Apache-2.0"
 description = "Compile-time code generation for Elasticsearch type implementations."
 repository = "https://github.com/elastic-rs/elastic"
 
