--- a/benches/elastic_async/Cargo.toml
+++ b/benches/elastic_async/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 [dependencies]
 elastic = { version = "*", path = "../../src/elastic", features = ["nightly"] }
 elastic_derive = { version = "*", path = "../../src/elastic_derive" }
-tokio_core = "*"
+tokio = "*"
 futures = "~0.1.16"
 serde = "*"
 serde_derive = "*"
