--- a/src/elastic/Cargo.toml
+++ b/src/elastic/Cargo.toml
@@ -14,22 +14,22 @@ travis-ci = { repository = "elastic-rs/elastic" }
 appveyor = { repository = "elastic-rs/elastic" }
 
 [dependencies]
-error-chain = "0.11.0"
+error-chain = "0.12.0"
 log = "~0.3.8"
 uuid = { version = "0.6", features = [ "v4" ] }
 serde = "~1"
 serde_json = "~1"
 serde_derive = "~1"
-reqwest = { version = "~0.8.0", features = ["unstable"] }
+reqwest = { version = "~0.9" }
 futures = "~0.1.16"
-tokio-core = "~0.1.9"
+tokio = "~0.1"
 futures-cpupool = "~0.1.6"
 
-elastic_reqwest = { version = "~0.20.7", path = "../reqwest" }
-elastic_types = { version = "~0.20.0", path = "../types" }
+elastic_reqwest = { path = "../reqwest" }
+elastic_types = { path = "../types" }
 
 [dev-dependencies]
 json_str = "~0.5"
 serde_derive = "~1"
-elastic_derive = { version = "~0.20.0", path = "../elastic_derive" }
+elastic_derive = { path = "../elastic_derive" }
 env_logger = "~0.4.3"
