add version numbers back to internal dependencies

--- a/src/elastic/Cargo.toml
+++ b/src/elastic/Cargo.toml
@@ -25,11 +25,11 @@ futures = "~0.1.16"
 tokio = "~0.1"
 futures-cpupool = "~0.1.6"
 
-elastic_reqwest = { path = "../reqwest" }
-elastic_types = { path = "../types" }
+elastic_reqwest = { version = "~0.20.7", path = "../reqwest" }
+elastic_types = { version = "~0.20.0", path = "../types" }
 
 [dev-dependencies]
 json_str = "~0.5"
 serde_derive = "~1"
-elastic_derive = { path = "../elastic_derive" }
+elastic_derive = { version = "~0.20.0", path = "../elastic_derive" }
 env_logger = "~0.4.3"
