--- a/src/types/Cargo.toml
+++ b/src/types/Cargo.toml
@@ -16,7 +16,7 @@ geo = "~0.4.0"
 geohash = "~0.4.0"
 geojson = "~0.9.0"
 serde_derive = "~1"
-elastic_types_derive = { path = "../types_derive" }
+elastic_types_derive = { version = "~0.20.0", path = "../types_derive" }
 
 [dev-dependencies]
 json_str = "^0.*"
