--- a/examples/account_sample/Cargo.toml
+++ b/examples/account_sample/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 publish = false
 
 [dependencies]
-elastic = { version = "*", path = "../../src/elastic" }
-elastic_derive = { version = "*", path = "../../src/elastic_derive" }
+elastic = { version = "~0.21.0-pre.1", path = "../../src/elastic" }
+elastic_derive = { version = "~0.21.0-pre.1", path = "../../src/elastic_derive" }
 
 quick-error = "*"
 serde = "*"
