--- a/src/types/Cargo.toml
+++ b/src/types/Cargo.toml
@@ -17,7 +17,7 @@ geohash = "~0.4.0"
 geojson = "~0.9.0"
 serde_derive = "~1"
 # TODO: Move this to a `dev-dependency`
-elastic_types_derive = { version = "~0.20.0", path = "../types_derive" }
+elastic_types_derive = { version = "~0.21.0-pre.1", path = "../types_derive" }
 
 [dev-dependencies]
 json_str = "^0.*"
