--- a/src/elastic_derive/Cargo.toml
+++ b/src/elastic_derive/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "MIT/Apache-2.0"
 description = "Compile-time code generation for Elasticsearch type implementations."
 repository = "https://github.com/elastic-rs/elastic"
+edition = "2018"
 
 [lib]
 name = "elastic_derive"
